cmake_minimum_required(VERSION 3.15)
project(TNFSHOJ)

set(CMAKE_CXX_STANDARD 14)
set (CMAKE_EXE_LINKER_FLAGS " -static-libgcc -static-libstdc++ " )

add_executable(TNFSHOJ 100 English Alphabet/100.cpp)
add_executable(TNFSHOJ 101 English Alphabet Prime/101.cpp)
add_executable(TNFSHOJ 102 Floating Point/102.cpp)
add_executable(TNFSHOJ 103 Is it good to drink/103.cpp)
add_executable(TNFSHOJ 104 星星樹/104.cpp)
add_executable(TNFSHOJ 105 森林中的魔王/105.cpp)
add_executable(TNFSHOJ 106 精靈的家在哪/106.cpp)
add_executable(TNFSHOJ 107 紀念品的難題/107.cpp)
add_executable(TNFSHOJ 108 抽卡的bug/108.cpp)
add_executable(TNFSHOJ 109 猜拳的比賽/109.cpp)
add_executable(TNFSHOJ 110 六芒星的咒符/110.cpp)
add_executable(TNFSHOJ 111 精靈的家在哪 2/main.cpp)
add_executable(TNFSHOJ 112 旋轉/main.cpp)
add_executable(TNFSHOJ 113 跳躍/main.cpp)
add_executable(TNFSHOJ 114 我閉著眼/main.cpp)
add_executable(TNFSHOJ 115 Reversed Card Open!/main.cpp)
add_executable(

        "117 成績竄改/main.cpp"
        "118 A. Avocado/main.cpp"
        119/main.cpp
        120/main.cpp
        "121 D. Dante/main.cpp"
        122/main.cpp
        123/main.cpp
        124/main.cpp
        "127 J. Julius Caesar/127.cpp"
        "128 K. King of Pizza/128.cpp"
        132/main.cpp
        16/main.cpp
        "17 塔的力量/17.cpp"
        "170 各種星星樹/170.cpp"
        18/main.cpp
        23/main.cpp
        237/main.cpp
        244/main.cpp
        245/main.cpp
        246/main.cpp
        255/main.cpp
        "273 2015南市賽校內模擬賽 - Problem 1/273.cpp"
        274/main.cpp
        275/main.cpp
        278/main.cpp
        "3 GCD/3.cpp"
        330/main.cpp
        331/main.cpp
        341/main.cpp
        342/main.cpp
        343/main.cpp
        355/main.cpp
        "36 simple problem/main.cpp"
        4/main.cpp
        404/main.cpp
        405/main.cpp
        432/main.cpp
        "5 Hello World!/5.cpp"
        65/main.cpp
        69/main.cpp
        7/main.cpp
        70/main.cpp
        "77 月精靈的祝福/77.cpp"
        "8 Scytale/8.cpp"
        81/main.cpp
        "92 天線寶寶說你好/92.cpp"
        "93 梯形面積/93.cpp"
        "94 判斷季節/94.cpp"
        "95 體育課期末考/95.cpp"
        "96 Arithmetic/96.cpp"
        "97 Bug Barrier/97.cpp"
        "98 Speed of Light/98.cpp"
        99/main.cpp)
